	  detected. We CANNOT use block_read_full_page() at all anywhere! This
	  is because initialized_size can lie within a block and ntfs_get_block
	  has no way to tell block_read_full_page about it. So our readpage
	  functions need to clone block_read_full_page and modify it to cope
	  with the significance of the different attribute sizes.
	  Still need to go through:
		aops.c, dir.c
	- Find and fix bugs.
	- W.r.t. s_maxbytes still need to be careful on reading/truncating as
	  there are dragons lurking in the details, e.g. read_inode() currently
	  does no checks for file size wrt s_maxbytes. So what happens when a
	  user open()s a file with i_size > s_maxbytes? Should read_inode()
	  truncate the visible i_size? Will the user just get -E2BIG (or
	  whatever) on open()? Or will (s)he be able to open() but lseek() and
	  read() will fail when s_maxbytes is reached? -> Investigate this!
	- Implement/allow non-resident index bitmaps in ntfs_readdir() and
	  consider initialized_size, etc.
	- vcn_to_lcn() should somehow return the correct pointer within the
	  ->run_list so we can get at the lcns for the following vcns, this is
	  strictly a speed optimization. Obviously need to keep the ->run_list
	  locked or RACE. load_attribute_list() already performs such an
	  optimization so use the same optimization where desired.
	- Optimize mft_readpage() to not do i/o on buffer heads beyond
	  initialized_size, just zero the buffer heads instead. Question: How
	  to setup the buffer heads so they point to the on disk location
	  correctly (after all they are allocated) but are not read from disk?
	- Consider if ntfs_file_read_compressed_block() shouldn't be coping
	  with initialized_size < data_size. I don't think it can happen but
	  it requires more careful consideration.

tng-0.0.9 - Work in progress

	- Add kill_super, just keeping up with the vfs changes in the kernel.
	- Repeat some changes from tng-0.0.8 that somehow got lost on the way